Fixes #3007 - Clean up Sonar flagged issues (#3008)